<resources>
    <string name="app_name">MyNewsTVShow</string>

    <string name="network_error_tips">请检查您的网络连接</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="request_time_out">请求超时，请检查网络连接~</string>

    <!--ToolBar的新闻类型-->
    <array name="news">
        <item>头条</item>
        <item>社会</item>
        <item>国内</item>
        <item>国际</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
        <item>时尚</item>
    </array>

    <string name="news">新闻</string>
    <string name="video">视频</string>
    <string name="photo">图片</string>
    <string name="others">其他</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_night">夜间模式</string>
    <string name="drawer_share">分享</string>

    <string name="photo_name">妹子</string>
    <string name="save">保存</string>
    <string name="set_wallpaper">设置壁纸</string>

    <string name="transition_photo">transition_animation_news_photos</string>


</resources>
